crates/ruff_linter/src/rules/ssort/snapshots/ruff_linter__rules__ssort__tests__async_function.py_dependency.snap
---
source: crates/ruff_linter/src/rules/ssort/mod.rs
---
SS001 [*] Statements are unsorted
 --> async_function.py:1:1
  |
1 | / def function():
2 | |     return dependency()
3 | |
4 | | def dependency():
5 | |     return True
6 | |
7 | | async def async_function():
8 | |     return function()
  | |_____________________^
  |
help: Organize statements
1 + def dependency():
2 +     return True
3 + 
4 | def function():
5 |     return dependency()
  - 
  - def dependency():
  -     return True
6 | 
7 | async def async_function():
8 |     return function()
note: This is an unsafe fix and may change runtime behavior
