crates/ruff_linter/src/rules/ssort/snapshots/ruff_linter__rules__ssort__tests__cycle_class_self.py_dependency.snap
---
source: crates/ruff_linter/src/rules/ssort/mod.rs
---
SS002 Function call cycle detected: method_a() -> method_b() -> method_a()
 --> cycle_class_self.py:2:5
  |
1 |   class Cycle:
2 | /     def method_a(self):
3 | |         return self.method_b()
  | |______________________________^
4 |
5 |       def method_b(self):
  |
